<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinatorMusic"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/id_login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/imag_background"
        android:orientation="vertical"
        tools:context="com.umss.rodres.mbp2.login.LogInActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:src="@mipmap/mbp3" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:orientation="vertical">

            <Button
                android:id="@+id/idLoginButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@mipmap/if_dropbox_1930495"
                android:elevation="6dp"
                android:text="@string/start_session" />

            <Button
                android:id="@+id/idTryAgainButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:elevation="6dp"
                android:visibility="gone"
                android:textColor="@color/primary_text"
                android:text="@string/try_again" />

            <Button
                android:id="@+id/idLogoutButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="192dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:background="@android:color/holo_red_light"
                android:textColor="@color/primary_text"
                android:elevation="6dp"
                android:visibility="gone"
                android:text="@string/logout"
                android:textSize="12sp" />
        </LinearLayout>

        <!--android:visibility="gone"-->
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/soportado_por"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@mipmap/ic_exoplayer" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:src="@mipmap/if_dropbox_1298735" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/idProgressBarLogin"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center_horizontal|center_vertical"
        />
</android.support.design.widget.CoordinatorLayout>


